<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="#000000"
    android:padding="20dp">

    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/app_logo"
        android:src="@drawable/gymlogo" />

    <TextView
        android:text="@string/buddy_pass"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="#2196F3"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/welcome_message"
        android:textSize="16sp"
        android:textColor="#FFFFFF"
        android:gravity="center"
        android:layout_marginBottom="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="227dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="#2196F3"
        android:text="@string/login"
        android:textColor="#212121"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="224dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:backgroundTint="#444444"
        android:text="@string/new_account"
        android:textColor="#FFFFFF" />

</LinearLayout>