<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    app:cardCornerRadius="18dp"
    app:cardElevation="6dp"
    app:cardBackgroundColor="#1A1A1A"
    android:foreground="?android:attr/selectableItemBackground"
    android:clipToPadding="false"
    android:clipChildren="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="18dp">

        <!-- Date -->
        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/schedule_title"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="#00A2FF" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="4dp">

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:src="@drawable/calender" />
        <TextView
            android:id="@+id/txtDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:padding="6dp" />
        </LinearLayout>
        <!-- Time -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="4dp">

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:src="@drawable/clock" />

        <TextView
            android:id="@+id/txtTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:padding="6dp" />

    </LinearLayout>

        <!-- Location -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="4dp">

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:src="@drawable/pin" />
        <TextView
            android:id="@+id/txtLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:padding="6dp" />
    </LinearLayout>

        <!-- Requests -->
        <TextView
            android:id="@+id/txtRequests"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/requests"
            android:textColor="#AAAAAA"
            android:textStyle="bold"
            android:layout_marginBottom="8dp" />

        <!-- Request List -->
        <LinearLayout
            android:id="@+id/requestContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="8dp">

        </LinearLayout>

        <!-- Cancel button -->
        <Button
            android:id="@+id/btnCancelSchedule"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="#B30E0E"
            android:text="@string/cancelSchedule"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            tools:ignore="VisualLintButtonSize" />

    </LinearLayout>

</androidx.cardview.widget.CardView>